# web_server

./: .env.encrypted  .gitignore  CSS_GUIDE.md  README.md  crawling.py  fix_quotes.py  fix_remaining_links.py  interview_prep.md  main.py  main_html.py  pyproject.toml  verify_install.py
.github/prompts/: savePrompt.prompt.md
Phi-4/data/seeds/: chem_ideal_gas.txt  cs_binary_search.txt  math_calculus.txt  test_seed.txt
Phi-4/data/synthetic/: train.jsonl
Phi-4/src/pipeline/: generate_dataset.py  generator.py  schemas.py
Phi-4/src/test/: inference.py
Phi-4/src/train/: train.py
Phi-4/src/utils/: inspect_data.py
auto_labeling/: README.md  TRAINING_GUIDE.md  auto_labeling.md  classes.yaml  requirements.txt
auto_labeling/scripts/: capture_and_label.py  review_labels.py  sync_yolo_model.py  train.py  user_follower.py
detect/: surveillance.py  yolo_detector.py
docs/: 02_ROS2_NETWORK_CONFIGURATION.md  03_camera_compression_guide.md  04_PHI4_CHATBOT_GUIDE.md  05_REMOTE_YOLO_TRAINING_GUIDE.md  06_SCREEN_TRAINING_GUIDE.md  07_CHATBOT_COLOR_GUIDE.md  interview_prep.md  self_introduction.md
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Contact.jsx  Dashboard.css  Dashboard.jsx  Home.jsx  Works.jsx
frontend/src/utils/: legacyScript.js
map/: map.pgm  map.yaml
my_pet/: __init__.py  pet_mode.py
runs/detect/owner_detection/: args.yaml
runs/detect/owner_detection2/: args.yaml  results.csv
runs/detect/owner_detection22/: args.yaml  results.csv
scripts/: env_crypto.py  sync_yolo_model.py
src/: __init__.py  chatbot.py  config.py  location.py  ros_node.py  web_search.py
src/robotis/: package.xml  setup.cfg  setup.py
src/robotis/launch/: robotis_navigation2.launch.py
static/css/: dashboard.css  style.css
static/js/: dashboard.js  nav2-map.js  script.js  wpo-minify-footer-71110d17.min.js
templates/: contact.html  dashboard.html  index.html  works.html
templates/components/: chatbot_widget.html
(+4 files in other folders)
