[project]
name = "web-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "opencv-python-headless (>=4.10.0,<5.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "Pillow (>=9.0.0,<11.0.0)",
    "PyYAML (>=6.0,<7.0)",
    "httpx (>=0.28.0,<1.0.0)",
    # PHi-4 챗봇 의존성
    "torch (>=2.0.0)",
    "transformers (>=4.40.0)",
    "peft (>=0.10.0)",
    "bitsandbytes (>=0.43.0)",
    "accelerate (>=0.28.0)",
    "scipy (<1.15)",
    "python-multipart (>=0.0.9,<1.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ultralytics (>=8.3.235,<9.0.0)"
]
